Fixing positioning of copyright container so it doesn't overlap on mobile

--- a/stallmonitor/css/master.css
+++ b/stallmonitor/css/master.css
@@ -59,11 +59,16 @@
   margin-right: 5%;
   text-align: center; }
 
-.credits-container {
-  position: absolute;
-  bottom: 0;      
-  margin-left: 30px;
-  margin-top: 30px;
+.credits-container {    
+  padding-left: 5%;
+  padding-top: 20px;
+}
+
+@media (min-width: 800px) {
+  .credits-container {
+    position: absolute;
+    bottom: 0;
+  }
 }
 
 .space-container {
